# quorum-details

./: 00_MASTER_BUILD_PROMPT.md  01_PRD.md  02_TECHNICAL_ARCHITECTURE.md  03_AI_ENGINE.md  04_DATABASE_SCHEMA.md  05_API_SPECIFICATION.md  06_BUSINESS_MODEL.md  07_USER_STORIES.md  08_TECH_STACK_MANIFEST.md  09_SECURITY_COMPLIANCE.md  10_TESTING_STRATEGY.md  11_DEVOPS_RUNBOOKS.md  12_LAUNCH_CHECKLIST.md  Dockerfile  Makefile.txt  README.md  alembic.ini  app_core_modules.py  app_main.py  docker-compose.yml  github_ci.yml  github_deploy.yml  implementation_pipeline.md  nginx.conf  pre-commit-config.yaml  promptviewer_artifact.html  pyproject.toml  quorum_deep_analysis.md  system_artifact.md  terraform_main.tf  v2-features.md
